Added logback configuration and fixed the token authentication bug

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -36,6 +36,12 @@ dependencies {
 	compile('net.sf.ehcache:ehcache-core:2.6.9') {
 		exclude group: 'commons-logging'
 	}
+	// https://mvnrepository.com/artifact/org.perf4j/perf4j
+	compile group: 'org.perf4j', name: 'perf4j', version: '0.9.16'
+
+	// https://mvnrepository.com/artifact/javax.mail/mail
+	compile group: 'javax.mail', name: 'mail', version: '1.4.1'
+
 
 	compile("io.springfox:springfox-swagger2:2.5.0")
 	compile("io.springfox:springfox-swagger-ui:2.5.0")
