--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -5,6 +5,13 @@ server.ssl.key-store-password = 198183
 server.ssl.key-password = 198183
 server.context-path=/collab
 
+#URL configurations
+# localhost
+collab.base.url=https://localhost:8443
+
+# prod
+# collab.base.url=https://<ec2ipaddess>:8443
+
 
 spring.datasource.url = jdbc:postgresql://localhost:5432/collab
 spring.datasource.username = postgres
@@ -17,6 +24,24 @@ spring.thymeleaf.cache=false
 spring.thymeleaf.mode=LEGACYHTML5
 
 backend.admin.role=BACKEND_ADMIN_ROLE
+
+# mail server configuration
+#mail.server.host=sg2plcpnl0026.prod.sin2.secureserver.net
+#mail.server.port=465
+
+mail.server.host=mail.cogitotechsolutions.com
+mail.server.port=25
+mail.server.protocol=smtp
+mail.server.username=pavanjosh@cogitotechsolutions.com
+mail.server.password=FOLK104used483
+reset.password.from.email=support@cogitotechsolutions.com
+
+
+mail.server.password.reset.subject=Event Collaboration: Password reset request 
+mail.server.password.reset.content=Please click the link below for the password reset
+mail.server.email.signature=With kind Regards \n Event Collaboration team.
+
+
 
 
 
